# hybrid_quantum_models

./: .gitignore  LICENSE  README.md  build_dist.py  build_doc.py  meta.yaml  pyproject.toml  setup.py
docs/: hqm.html  index.html  search.js
docs/hqm/: circuits.html  classification.html  encoding.html  layers.html  noise.html  regression.html  utils.html
docs/hqm/circuits/: amplitudeencoding.html  angle_encoding.html  angleencoding.html  circuit.html  custom_circuits.html  customcircuits.html  datareuploading.html
docs/hqm/classification/: HybridMLP.html  cnn.html  hcnn.html  hmlp.html
docs/hqm/encoding/: autoencoders.html
docs/hqm/layers/: ai_interface.html  aiinterface.html  basiclayer.html  quanvolution.html  recurrent.html
docs/hqm/noise/: gaussianlike.html  (+1 more)
docs_assets/: module.html.jinja2
hqm/: __init__.py  test.py
hqm/circuits/: __init__.py  amplitudeencoding.py  angle_encoding.py  angleencoding.py  circuit.py  circuits.md  customcircuits.py  datareuploading.py
hqm/classification/: HybridMLP.py  __init__.py  classification.md  cnn.py  hcnn.py  hmlp.py
hqm/classifiers/: HybridMLP.py
hqm/encoding/: __init__.py  autoencoders.py  encoding.md
hqm/layers/: __init__.py  ai_interface.py  aiinterface.py  basiclayer.py  layers.md  quanvolution.py  recurrent.py  torch_layer.py
hqm/noise/: __init__.py  gaussianlike.py  noise.md  randomcircuit.py
hqm/regression/: HybridMLP.py  __init__.py  hmlp.py  regression.md
hqm/utils/: __init__.py  aiinterface.py  printer.py  sizes.py
tests/: test_amplitudeencoding_circuits.py  test_angleencoding_circuits.py  test_autoencoders.py  test_custom_circuits.py  test_noise_generators.py  test_qgru_layer.py  test_qtorch_cnn_classifier.py  test_qtorch_regressor.py  test_quanvolution_autoencoder.py  test_quanvolution_layer.py
(+5 files in other folders)
